--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -4,14 +4,15 @@ import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
+import { staticPath } from "../utils";
 
 const { title, explicit, pubDate, cover, description } = Astro.props;
 dayjs.extend(localizedFormat);
 const displayDate = dayjs(pubDate).format("ll");
 ---
 
-<BaseLayout title={`${title} - ${astropodConfig.name}`} description={description} image={cover}>
-  <HeaderCard title={title} subtitle={astropodConfig.name} cover={cover} explicit={explicit} />
+<BaseLayout title={`${title} - ${astropodConfig.name}`} description={description} image={staticPath(cover)}>
+  <HeaderCard title={title} subtitle={astropodConfig.name} cover={staticPath(cover)} explicit={explicit} />
 
   <main class="md:flex md:justify-center">
     <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
