--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -7,6 +7,7 @@ import localizedFormat from "dayjs/plugin/localizedFormat";
 dayjs.extend(localizedFormat);
 import PlayIcon from "./icons/playIcon.astro";
 import PauseIcon from "./icons/pauseIcon.astro";
+import { staticPath } from "../utils";
 
 let cover_url = cover ? cover : astropodConfig.cover;
 const displayDate = dayjs(pubDate).format("ll");
@@ -32,7 +33,7 @@ const displayDuration = formatTime(duration);
 <div class="episode-card">
   <div class="hero-content flex-row">
     <a href={url} class="min-w-fit">
-      <img src={cover_url} alt={title} class="shadow-lg rounded-md w-[4.5rem] h-[4.5rem] md:w-24 md:h-24" />
+      <img src={staticPath(cover_url)} alt={title} class="shadow-lg rounded-md w-[4.5rem] h-[4.5rem] md:w-24 md:h-24" />
     </a>
     <div class="grow w-full overflow-auto">
       <a href={url}>
