--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
+import { staticPath } from "../utils";
 ---
 
 <BaseLayout title="404: Not Found">
@@ -8,7 +9,7 @@ import astropodConfig from "../../.astropod/astropod.config.json";
     <img
       alt={astropodConfig.name + "cover"}
       class="rounded-lg w-24 h-24 md:h-40 md:w-40 mx-auto my-5"
-      src={astropodConfig.cover}
+      src={staticPath(astropodConfig.cover)}
     />
     <h1 class="text-9xl font-bold mb-2">404</h1>
     <h3 class="text-2xl">The page you're looking for couldn't be found.</h3>
