--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -35,13 +35,13 @@ let cover_url = cover ? cover : astropodConfig.cover;
     <img
       alt={astropodConfig.name + "cover"}
       class="-mt-28 mx-6 md:-mt-28 border-4 z-10 relative border-base-100 rounded-lg md:mx-11 w-24 h-24 md:h-40 md:w-40"
-      src={cover_url}
+      src={staticPath(cover_url)}
     />
   </div>
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
-    <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
-    <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
+    <a href={staticPath("/")} class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
+    <a href={staticPath("/about")} class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
 
     <div class="grow"></div>
 
@@ -52,7 +52,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
     {
       astropodConfig.fundingUrl && (
         <a
-          href={astropodConfig.fundingUrl}
+          href={staticPath(astropodConfig.fundingUrl)}
           class="btn btn-ghost btn-square m-1 sm:w-12 w-10 "
           title={astropodConfig.fundingText}
         >
@@ -61,7 +61,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
       )
     }
 
-    <a href="/rss.xml" class="btn btn-ghost btn-square m-1 sm:w-12 w-10" title="RSS Feed">
+    <a href={staticPath("/rss.xml")} class="btn btn-ghost btn-square m-1 sm:w-12 w-10" title="RSS Feed">
       <RssIcon />
     </a>
   </div>
