--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -34,7 +34,7 @@ const description = marked.parse(entry.body.slice(0, 500), { renderer: renderer 
   cover={episode.cover}
   explicit={episode.explicit}
   description={description}
-  cover={staticPath(episode.cover)}
+  cover={episode.cover}
 >
   <Content />
 </EpisodeLayout>
