--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -40,7 +40,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
   </div>
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
-    <a href={staticPath("/")} class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
+    <a href={staticPath("#")} class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
     <a href={staticPath("/about")} class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
 
     <div class="grow"></div>
